[project]
name = "streamlit-server-state"
version = "0.18.0"
description = ""
authors = [
    {name = "Yuichiro Tachibana (Tsuchiya)", email = "t.yic.yt@gmail.com"},
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=0.65.0",
    "packaging>=20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
    "altair<5",  # For testing older versions of Streamlit: https://discuss.streamlit.io/t/modulenotfounderror-no-module-named-altair-vegalite-v4/42921
    "protobuf<=3.20",  # For testing older versions of Streamlit: https://discuss.streamlit.io/t/streamlit-run-with-protobuf-error/25632/3
]

[project.urls]
Homepage = "https://github.com/whitphx/streamlit-server-state"

[tool.ruff.lint]
extend-select = ["I"]
